tests/core/snapshots/test-missing-schema-query.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Validation Error\n• schema definition is missing query root\n",
    "trace": [],
    "description": null
  }
]
