tests/core/snapshots/test-modify.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
input Foo {
  bar: String
}

type Query {
  data(input: Foo): String
}

schema {
  query: Query
}
