tests/core/snapshots/test-multi-interface.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

interface IA {
  a: String
}

interface IB {
  b: String
}

type B implements IA & IB {
  a: String
  b: String
}

type Query {
  bar: B @http(url: "http://jsonplaceholder.typicode.com/user")
}
