tests/core/snapshots/test-multiple-config-types.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bar": {
        "name": "name",
        "id": 1
      }
    }
  }
}
