tests/core/snapshots/test-multiple-config-types.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
input Input {
  id: Int
  name: String
}

type Output {
  id: Int
  name: String
}

type Query {
  bar(input: Input): Output
}

schema {
  query: Query
}
