tests/core/snapshots/test-multiple-resolvable-directives-on-field.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Validation Error\n• Multiple resolvers detected [@http, @expr] [Query, user1]\n• Multiple resolvers detected [@http, @call] [Query, user2]\n",
    "trace": [],
    "description": null
  }
]
